--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
 <a href="week17.html"><b>17</b></a>
-<a href="week18.html"><b>18P</b></a><br>
+<a href="week18.html"><b>18</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -78,7 +78,7 @@
 <tr><td><font size=2>Rich(5)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10270</font></td>
+    <td><font size=2>10920</font></td>
     <td><font size=2>8770</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>170</font></td>
@@ -102,7 +102,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9385</font></td>
+    <td><font size=2>9595</font></td>
     <td><font size=2>11580</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
@@ -110,10 +110,10 @@
 <tr><td><font size=2>Steven(1)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>10490</font></td>
+    <td><font size=2>10780</font></td>
     <td><font size=2>11935</font></td>
     <td><font size=2>1015</font></td>
-    <td><font size=2>335</font></td>
+    <td><font size=2>290</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -126,10 +126,10 @@
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11990</font></td>
+    <td><font size=2>12070</font></td>
     <td><font size=2>10655</font></td>
     <td><font size=2>1140</font></td>
-    <td><font size=2>330</font></td>
+    <td><font size=2>80</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
     <td><font size=2>9</font></td>
@@ -158,7 +158,7 @@
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9610</font></td>
+    <td><font size=2>9795</font></td>
     <td><font size=2>10695</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
