--- a/roster.html
+++ b/roster.html
@@ -252,8 +252,8 @@
 <tr><td> LV</td><td>Brock Bowers           </td></tr>
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DET</td><td>Jake Bates             </td></tr>
 <tr><td> GB</td><td>Brandon McManus        </td></tr>
+<tr><td>DEN</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>TreVeyon Henderson     </td></tr>
 <tr><td>NYG</td><td>Jaxson Dart            </td></tr>
