--- a/week18.html
+++ b/week18.html
@@ -13,7 +13,7 @@
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Collins (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Loveland (D)</td>  <td></td><td align=right>***</td></tr>
-<tr><td>McManus (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Lutz (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>155</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
