--- a/freeagt.html
+++ b/freeagt.html
@@ -82,12 +82,12 @@
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
 <tr><td><font size=3>Will Reichard          </td><td><font size=3>1520</td></tr>
+<tr><td><font size=3>Jake Bates             </td><td><font size=3>1275</td></tr>
 <tr><td><font size=3>Nick Folk              </td><td><font size=3>1215</td></tr>
 <tr><td><font size=3>Riley Patterson        </td><td><font size=3>1185</td></tr>
 <tr><td><font size=3>Cairo Santos           </td><td><font size=3>1185</td></tr>
 <tr><td><font size=3>Blake Grupe            </td><td><font size=3>1175</td></tr>
 <tr><td><font size=3>Chad Ryland            </td><td><font size=3>1155</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3>1100</td></tr>
 <tr><td><font size=3>Andre Szmyt            </td><td><font size=3>1030</td></tr>
 <tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 975</td></tr>
 <tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 970</td></tr>
