--- a/week18.html
+++ b/week18.html
@@ -7,12 +7,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
-<tr><td>Maye (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Maye (D)</td>      <td></td><td align=right>145</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>KWilliams (D)</td> <td></td><td align=right>100</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Collins (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Loveland (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Loveland (D)</td>  <td></td><td align=right>70</td></tr>
 <tr><td>Lutz (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>155</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
@@ -21,15 +21,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (10)</b></font></td></tr>
-<tr><td>JAllen (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Cook (D)</td>      <td></td><td align=right>***</td></tr>
-<tr><td>Hampton (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Nacua (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>JAllen (D)</td>    <td></td><td align=right>190</td></tr>
+<tr><td>Cook (D)</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Hampton (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Nacua (D)</td>     <td></td><td align=right>180</td></tr>
 <tr><td>Flowers</td>       <td></td><td align=right>315</td></tr>
-<tr><td>Kincaid (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Kincaid (D)</td>   <td></td><td align=right>75</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>270</td></tr>
 <tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>1030</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -81,14 +81,14 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Barkley (D)</td>   <td></td><td align=right>50</td></tr>
 <tr><td>JWarren</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>50</td></tr>
 <tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Goedert (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Goedert (D)</td>   <td></td><td align=right>125</td></tr>
 <tr><td>Mevis</td>         <td></td><td align=right>140</td></tr>
 <tr><td>Loop</td>          <td></td><td align=right>60</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>455</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -130,10 +130,10 @@
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>105</td></tr>
 <tr><td>MWilson</td>       <td></td><td align=right>170</td></tr>
-<tr><td>Kittle (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Kittle (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Little</td>        <td></td><td align=right>160</td></tr>
 <tr><td>Shough</td>        <td></td><td align=right>135</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>760</td></tr>
 </table>
 </td>
 <td>
@@ -142,12 +142,12 @@
 <tr><td>Brissett</td>      <td></td><td align=right>185</td></tr>
 <tr><td>Charbonnet</td>    <td></td><td align=right>185</td></tr>
 <tr><td>Dowdle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>35</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>80</td></tr>
 <tr><td>Ward</td>          <td></td><td align=right>100</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>585</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>12395</font></td>
+    <td><font size=2>13155</font></td>
     <td><font size=2>9835</font></td>
     <td><font size=2>1355</font></td>
     <td><font size=2>285</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Roger(10)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11400</font></td>
+    <td><font size=2>12430</font></td>
     <td><font size=2>9955</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>John(8)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10350</font></td>
+    <td><font size=2>10935</font></td>
     <td><font size=2>9705</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>270</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9165</font></td>
+    <td><font size=2>9620</font></td>
     <td><font size=2>8965</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>255</font></td>
