--- a/week18.html
+++ b/week18.html
@@ -11,7 +11,7 @@
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams (D)</td> <td></td><td align=right>100</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Collins (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Collins (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Loveland (D)</td>  <td></td><td align=right>70</td></tr>
 <tr><td>Lutz (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>155</td></tr>
